Bug 286414 - calligrawords does not support listing/number restarts in subentrys
Summary: calligrawords does not support listing/number restarts in subentrys
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: opendocument (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-12 13:09 UTC by Bernd Buschinski
Modified: 2012-01-14 13:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
test document (9.01 KB, application/vnd.oasis.opendocument.text)
2011-11-12 13:09 UTC, Bernd Buschinski
Details
left libreoffice, right calligra (7.32 KB, image/png)
2011-11-12 13:10 UTC, Bernd Buschinski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernd Buschinski 2011-11-12 13:09:57 UTC
Created attachment 65553 [details]
test document

Version:           2.4-snapshots (using KDE 4.7.3) 
OS:                Linux

calligrawords does not support listing/number restarts in subentrys

1. one
  1.1 one.one
  1.2 one.two
  1.1 one.one

shows as

1. one
  1.1 one.one
  1.2 one.two
  1.3 one.one

Reproducible: Always

Steps to Reproduce:
- create a document with number/listing
- create a (1.)1. and (1.)2., (1.)3. and set (1.)3. to restart counting -> (1.)1.
- save & open with calligrawords

Actual Results:  
Calligrawords shows it as (1.)3. instead of (1.)1.

Expected Results:  
calligrawords should show it as 1.

calligra-2.3.83

- counting restart in toplevel entrys works
e.g:
1.
2.
1.

see attachted document
Comment 1 Bernd Buschinski 2011-11-12 13:10:29 UTC
Created attachment 65554 [details]
left libreoffice, right calligra
Comment 2 Gopalakrishna Bhat 2012-01-14 13:16:24 UTC
Git commit 9ae141f04f5357a6d803681b89961d33b9782353 by Gopalakrishna Bhat A.
Committed on 14/01/2012 at 14:06.
Pushed by gopalakrishnabhat into branch 'master'.

Support Multi-lists within a list.

M  +30   -20   libs/kotext/opendocument/KoTextLoader.cpp
M  +3    -1    libs/kotext/opendocument/KoTextWriter_p.cpp

http://commits.kde.org/calligra/9ae141f04f5357a6d803681b89961d33b9782353