Support Multi-lists within a list.

BUG: 286414