libs/kotext/opendocument/KoTextWriter_p.cpp
@@ -1474,7 +1474,9 @@ QTextBlock& KoTextWriter::Private::saveList(QTextBlock &block, QHash<QTextList *
                     }
                 } else {
                     //This is a sub-list
-                    block = saveList(block, listStyles, level + 1, currentTable);
+                    while (KoList::level(block) == (level + 1)) {
+                        block = saveList(block, listStyles, level + 1, currentTable);
+                    }
                     //saveList will return a block one-past the last block of the list.
                     //Since we are doing a block.next() below, we need to go one back.
                     block = block.previous();
